UI alignmen fix

--- a/src/index.css
+++ b/src/index.css
@@ -794,3 +794,9 @@ div.RICC{
     width: 100%!important;
     height: 100%!important;
 }
+.modal-dialog.modal-lg.asyncModal.serviceAreaModal > div > div.modal-body > form > div > div:nth-child(3) > div > .Select.ServiceRequestSelect.is-clearable.is-searchable > div{
+    outline:none;
+}
+.Select.is-focused:not(.is-open)>.Select-controll{
+    border-color: #7a329f!important;
+}
